--- a/MVCMusicStore/Content/Site.css
+++ b/MVCMusicStore/Content/Site.css
@@ -586,6 +586,12 @@ tr.pager td {
     padding: 0 0.25em 0 0;
 }
 
+/***********************
+    * Browse Action
+************************/
+.spaced_list {
+    padding: 1.25em 1.25em 0 0;
+}
 
 /********************
 *   Mobile Styles   *
