Added "Search" Action to StoreManagerController; Modified Home Page with Search Field

--- a/MVCMusicStore/Content/Site.css
+++ b/MVCMusicStore/Content/Site.css
@@ -542,6 +542,8 @@ th {
 }
 
     th a {
+        font-size: 1.2em;
+        text-align: left;
         display: block;
         position: relative;
     }
