--- a/MVCMusicStore/Views/StoreManager/Edit.cshtml
+++ b/MVCMusicStore/Views/StoreManager/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit: @Model.Title</h2>
 
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
